Time: 5 ms (99.35%), Space: 44.9 MB (88.2%) - LeetHub